--- a/WheelManager/app/src/main/res/values/strings.xml
+++ b/WheelManager/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Create</string>
+    <string name="menu_gallery">Product</string>
     <string name="menu_slideshow">Slideshow</string>
 </resources>
