--- a/WheelManager/app/src/main/res/values/strings.xml
+++ b/WheelManager/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Product</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_service">Service</string>
 </resources>
