--- a/WheelManager/app/src/main/res/values/strings.xml
+++ b/WheelManager/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Product</string>
     <string name="menu_service">Service</string>
+    <string name="hint_name">Enter name</string>
+    <string name="bt_add">Add</string>
+    <string name="bt_cancel">Cancel</string>
+    <string name="bt_save">Save</string>
 </resources>
